Tengo barco casi acabado, Falta retocar delete y update no probado